# echospeak

./: .gitignore  README.md
backend/: pyproject.toml
backend/echospeak/: asgi.py  settings.py  urls.py  wsgi.py
backend/speech/: urls.py  utils.py  views.py
echospeak/: manage.py
echospeak/echospeak/: settings.py  urls.py
echospeak/speech/: models.py  serializers.py  urls.py  utils.py
echospeak/speech/migrations/: 0001_initial.py  0002_rename_fluency_score_speechanalysis_accuracy_percent_and_more.py
frontend/: App.js  package-lock.json  package.json
frontend/src/: App.js
