[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "mysqlclient>=2.2.7",
    "numpy>=2.3.4",
    "pydub>=0.25.1",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.1",
    "speechrecognition>=3.14.3",
]
